--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.10",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "ioredis": "^5.3.2",
     "next": "13.5.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "swr": "^2.2.2",
+    "twin.macro": "^3.4.0"
+  },
+  "devDependencies": {
+    "typescript": "5.2.2"
   }
 }
